# CppLoxTWI

./: AstPrinter.cpp  CMakeLists.txt  Environment.cpp  Interpreter.cpp  Lox.cpp  LoxClass.cpp  LoxFunction.cpp  LoxInstance.cpp  Parser.cpp  README.md  Resolver.cpp  Scanner.cpp  main.cpp
headers/: AstPrinter.hpp  Environment.hpp  Errors.hpp  Expr.hpp  Interpreter.hpp  Lox.hpp  LoxCallable.hpp  LoxClass.hpp  LoxFunction.hpp  LoxInstance.hpp  LoxReturn.hpp  Parser.hpp  Resolver.hpp  RuntimeError.hpp  Scanner.hpp  Stmt.hpp  Token.hpp  TokenType.hpp  test.txt
test/: CMakeLists.txt  InitialTest.cpp
test/SampleLoxFiles/: expr_2.lox  expr_3.lox  expr_4.lox  expr_5.lox  stmt_1.lox  test_1.lox
test/SampleLoxFilesExpectedOutputs/: expr_4.lox.expected  expr_5.lox.expected  test1.lox.expected  test2.lox.expected  test_1.lox.expected
